plugins/mermaid/src/test/resources/intention/declarations/annotation_statement.mermaid
classDiagram
  <<interface>><error descr="Unresolved class">A</error>